kubernetes/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: web-server
spec:
  replicas: 2
  selector:
    matchLabels:
      steamscraper.io/name: client
  template:
    metadata:
      labels:
        steamscraper.io/name: client
    spec:
      containers:
      - name: web-server
        image: nginx:latest
        ports:
        - containerPort: 443
