kubernetes/nginx-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller-deployment
  labels:
    app: nginx-ingress
spec:
  replicas: 2
  selector:
    matchLabels:
      steamscraper.io/name: nginx-ingress
  template:
    metadata:
      labels:
        steamscraper.io/name: nginx-ingress
    spec:
      containers:
      - name: nginx-ingress-controller
        image: nginx-ingress-controller:latest
        ports:
        - containerPort: 80
        - containerPort: 443
