kubernetes/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-server-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      steamscraper.io/name: backend-server
  template:
    metadata:
      labels:
        steamscraper.io/name: backend-server
    spec:
      containers:
      - name: backend-server
        image: node:18
        ports:
        - containerPort: 3001 
---
apiVersion: v1
kind: Service
metadata:
  name: backend-message-broker-service
spec:
  selector:
    matchLabels:
      steamscraper.io/name: redis-server
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 6379
