kubernetes/redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-server
  namespace: database
spec:
  replicas: 1
  selector:
    matchLabels:
      steamscraper.io/name: redis
  template:
    metadata:
      labels:
        steamscraper.io/name: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: database
spec:
  selector:
    steamscraper.io/name: redis
  ports:
    - name: redis
      protocol: redis
      port: 6379
