kubernetes/steam-api.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: steamapi-statefulset
spec:
  replicas: 1
  selector:
    matchLabels:
      steamscraper.io/name: steamapi
  template:
    metadata:
      labels:
        steamscraper.io/name: steamapi
    spec:
      containers:
      - name: steamapi
        image: python:latest
        ports:
        - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: steamapi-service
spec:
  selector:
    matchLabels:
      steamscraper.io/name: steamapi
  ports:
    - port: 443
  type: LoadBalancer
