kubernetes/steamapi.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: steamapi-statefulset
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      steamscraper.io/name: steamapi
  template:
    metadata:
      labels:
        steamscraper.io/name: steamapi
    spec:
      containers:
      - name: steamapi
        image: python:latest
        ports:
        - containerPort: 443
        volumeMounts:
        - name: certs
          mountPath: "/etc/ssl/certs"
          readOnly: true

      volumes:
      - name: certs
        secret:
          secretName: tls-cert

---
apiVersion: v1
kind: Service
metadata:
  name: steamapi
  namespace: backend
spec:
  selector:
    matchLabels:
      steamscraper.io/name: steamapi
  ports:
    - port: 443
  type: LoadBalancer
