kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations: 
    nginx.ingress.kubernetes.io/auth-signin:  https://$host/api/auth/login?$query_string
    nginx.ingress.kubernetes.io/auth-url: https://$host/api/auth/oauth/token
    nginx.ingress.kubernetes.io/proxy-buffer-size: 512k
spec:
  rules:
  - host: steamscraper.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 443
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 443
      - path: /api/steam
        pathType: Prefix
        backend:
          service:
            name: steamapi-service
            port:
              number: 443
